syncthing/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: syncthing
  namespace: default
  labels:
    app: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
      - name: syncthing
        image: linuxserver/syncthing
        ports:
        - containerPort: 8384
        - containerPort: 22000
        - containerPort: 21027
          protocol: UDP
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /home/jphuc96
          name: data
      restartPolicy: Always
      volumes:
      - name: config 
        persistentVolumeClaim:
          claimName: syncthing-config
      - name: data
        persistentVolumeClaim:
          claimName: syncthing-data
