syncthing/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: syncthing
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-realm: "Authentication Required for Syncthing"
    # nginx.ingress.kubernetes.io/auth-secret: sudojoss-generic-basic-auth
spec:
  rules:
  - host: sync.sudojoss.com
    http:
      paths:
        - path: /
          backend:
            serviceName: syncthing
            servicePort: 8384
  tls: 
  - secretName: sudojoss-tls
    hosts:
    - sync.sudojoss.com
